# max-bot-for-dev

./: .env.example  .gitignore  DEPLOY_VERCEL.md  Dockerfile  README  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: db-migrate.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260317120000_init_db.py
api/: index.py
db/: __init__.py  base.py  config.py  models.py  seed.py  session.py
db/repositories/: __init__.py  question_repo.py  stat_repo.py  topic_repo.py  user_repo.py
services/: __init__.py  quiz_api.py  quiz_service.py
services/api/: __init__.py  app.py
services/api/routers/: __init__.py  max_webhook.py  quiz.py
services/api/schemas/: __init__.py  max_update.py  quiz.py
services/application/: __init__.py  max_event_dispatcher.py
services/application/max_handlers/: __init__.py  bot_started.py  common.py  message_callback.py  message_created.py  state_store.py
services/core/: __init__.py  settings.py
services/integrations/: ROSPATENT_SIMILAR_SEARCH_CONTRACT.md  __init__.py  max_api_client.py  rospatent_api_client.py
services/stt/: app.py
src/: bot.js  index.js
src/config/: env.js
src/handlers/: aiChat.js  victorine.js
stt-service/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  test_stat_repo.py  test_topic_and_question_repos.py  test_user_repo.py
web/: index.js
web/config/: env.js
web/handlers/: aiChat.js  victorine.js
